tests/js/invalid/if/one-conditional.buri
result = if 1 do "hello"